Add libunwind because pip install is failing on this

--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - matplotlib<3
   - python-stratify
   - esmpy
+  - libunwind  #  specifically for Python3.7+
   # Multi language support:
   - ncl
   - julia
