Align environment.yml and meta.yaml

--- a/meta.yaml
+++ b/meta.yaml
@@ -37,6 +37,7 @@ requirements:
   run:
     # esmvaltool
     - python
+    - libunwind  #  specifically for Python3.7+
     - graphviz    
     - iris
     - python-stratify
@@ -63,7 +64,7 @@ requirements:
     - yamale  # in birdhouse channel
     # Multi language support:
     - ncl
-    - ncurses=6.1=hfc679d8_1
+    - jasper!=1.900.31  # pinned NCL dependency
     - r-base
     - r-rcpp
     - cdo=1.9.3
