Add julia from apt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run:
           command: |
-            apt update && apt -y install build-essential gfortran
+            apt update && apt -y install build-essential gfortran julia
             # Create a file to checksum as cache key
             date --rfc-3339 date > cache_key.txt
             cat environment.yml >> cache_key.txt
@@ -49,7 +49,7 @@ jobs:
       - checkout
       - run:
           command: |
-            apt update && apt -y install build-essential gfortran
+            apt update && apt -y install build-essential gfortran julia
             # Create a file to checksum as cache key
             date --rfc-3339 date > cache_key.txt
             cat environment.yml >> cache_key.txt
@@ -96,7 +96,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
@@ -136,7 +136,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda create -y --name esmvaltool python=2 > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
@@ -168,7 +168,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
@@ -199,7 +199,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
@@ -227,7 +227,7 @@ jobs:
             # Install prerequisites
             mkdir /logs
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda_base.txt 2>&1
             conda install -y conda-build conda-verify >> /logs/conda_base.txt 2>&1
             # Log versions
@@ -265,7 +265,7 @@ jobs:
             # Install prerequisites
             mkdir /logs
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             # Create and activate conda environment
             conda create -y --name esmvaltool
@@ -292,7 +292,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda create -y --name ncl > /logs/conda.txt 2>&1
             set +x; conda activate ncl; set -x
