--- a/esmvaltool/recipes/recipe_toymodel_wp4.yml
+++ b/esmvaltool/recipes/recipe_toymodel_wp4.yml
@@ -46,7 +46,7 @@ diagnostics:
       tasmax:
         preprocessor: preproc
         mip: day
-        field: T2M
+        field: T2Ds
 
     scripts:
       main:
