Adjust recipes to new OBS dataset name, type and version

--- a/esmvaltool/recipes/recipe_autoassess_radiation_rms_Amon_obs.yml
+++ b/esmvaltool/recipes/recipe_autoassess_radiation_rms_Amon_obs.yml
@@ -78,7 +78,7 @@ diagnostics:
         field: T2Ms
     additional_datasets:
       - {dataset: CERES-EBAF,    project: obs4mips,  level: L3B,  version: Ed2-7,  start_year: 2001,  end_year: 2012, tier: 1}
-      - {dataset: CERES-SYN1deg, project: OBS,       type: comp,  version: Ed3A,   start_year: 2001,  end_year: 2015, tier: 2}
+      - {dataset: CERES-SYN1deg, project: OBS,       type: sat,  version: Ed3A,   start_year: 2001,  end_year: 2015, tier: 3}
     scripts:
       autoassess_Radiation_rms_Amon_obs:
         script: autoassess/autoassess_radiation_rms.py
@@ -100,7 +100,7 @@ diagnostics:
         field: T2Ms
     additional_datasets:
       - {dataset: JRA-55,        project: ana4mips,  type: reanalysis,          start_year: 2001,  end_year: 2005, tier: 1}
-      - {dataset: CERES-SYN1deg, project: OBS,       type: comp, version: Ed3A, start_year: 2001,  end_year: 2015, tier: 2}
+      - {dataset: CERES-SYN1deg, project: OBS,       type: sat, version: Ed3A, start_year: 2001,  end_year: 2015, tier: 3}
     scripts:
       autoassess_Radiation_rms_Amon_obs:
         script: autoassess/autoassess_radiation_rms.py
