--- a/esmvaltool/recipes/recipe_cox18nature.yml
+++ b/esmvaltool/recipes/recipe_cox18nature.yml
@@ -9,6 +9,9 @@ documentation:
   authors:
     - schl_ma
 
+  maintainer:
+    - schl_ma
+
   references:
     - cox18nature
 
@@ -46,8 +49,8 @@ diagnostics:
         start_year: 1880
         end_year: 2015
     additional_datasets:
-      - {dataset: HadCRUT, project: OBS, type: ground, version: 3v, tier: 2, end_year: 2013}
-      - {dataset: HadCRUT4, project: OBS, type: ground, version: 1,  tier: 2}
+      - {dataset: HadCRUT3, project: OBS, type: ground, version: 1, tier: 2, end_year: 2013}
+      - {dataset: HadCRUT4, project: OBS, type: ground, version: 1, tier: 2}
       # Day is out of range for month (wait for iris > 2.0)
       # - {dataset: ACCESS1-0}
       # Historical data end year is 2012, not 2005 (overlaps with RCP8.5)
