Added GFDL-ESM2M model to anav13 recipe

--- a/esmvaltool/recipes/recipe_anav13jclim.yml
+++ b/esmvaltool/recipes/recipe_anav13jclim.yml
@@ -213,8 +213,7 @@ diagnostics:
       - {dataset: CanESM2}
       - {dataset: CESM1-BGC}
       - {dataset: GFDL-ESM2G}
-      # Empty output file (only missing values)
-      # - {dataset: GFDL-ESM2M}
+      - {dataset: GFDL-ESM2M}
       - {dataset: HadGEM2-CC}
       - {dataset: HadGEM2-ES}
       - {dataset: inmcm4}
