--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -75,7 +75,7 @@ authors:
   cagn_ch:
     name: Cagnazzo, Chiara
     institute: CNR, Italy
-    email: chiara.cagnazzo 'at' cnr.it    
+    email: chiara.cagnazzo 'at' cnr.it
   chen_ja:
     name: Chen, Jack
     institute: NCAR, USA
@@ -115,6 +115,10 @@ authors:
     name: Gettelman, Andrew
     institute: NCAR, USA
     email: andrew 'at' ucar.edu
+  gier_be:
+    name: Gier, Betina
+    institute: University of Bremen, Germany
+    email: betina.gier 'at' dlr.de
   gott_kl:
     name: Gottschaldt, Klaus-Dirk
     institute: DLR, Germany
@@ -243,7 +247,7 @@ authors:
   serv_fe:
     name: Serva, Federico
     institute: CNR, Italy
-    email: federico.serva 'at' artov.isac.cnr.it    
+    email: federico.serva 'at' artov.isac.cnr.it
   somm_ph:
     name: Sommer, Philipp
     institute: Univ. of Hamburg, Germany
@@ -490,10 +494,11 @@ references:
   rebora06jhm: "Rebora et. al., JHM 7, 724, 2006."
   righi13acp: "Righi et al., Atmos. Chem. Phys., 13, 9939-9970, doi:10.5194/acp-13-9939-2013, 2013."
   righi15gmd: "Righi et al., Geosci. Model Dev., 8, 733-768 doi:10.5194/gmd-8-733-2015, 2015."
+  rk2008bams: "Reichler and Kim, Bull. Amer. Meteor. Soc., 89, 303–312, doi:10.1175/BAMS-89-3-303, 2008."
   roedenbeck13os: "Roedenbeck, C. et al., Ocean Sci., 9, 193-216, doi:10.5194/os-9-193-2013, 2013."
   roehrig13jclim: "Roehrig, R. et al., J. Climate, 26, 6471-6505, doi:10.1175/JCLI-D-12-00505.1, 2013."
   sperber12asl: "Sperber and Kim, Atmos. Sci. Lett., 13, 3, 187-193, doi:10.1002/asl.378, 2012."
-  straus07jcli: "Straus, D.M., S. Corti, and F. Molteni. J. Climate, 20, 2251–2272, doi:10.1175/JCLI4070.1, 2007 " 
+  straus07jcli: "Straus, D.M., S. Corti, and F. Molteni. J. Climate, 20, 2251–2272, doi:10.1175/JCLI4070.1, 2007 "
   stroeve07grl: "Stroeve, J. et al., Geophys. Res. Lett., 34, L09501, doi:10.1029/2007GL029703, 2007."
   taylor12: "Taylor et al., Nature, 489, 423-426, doi:10.1038/nature11377, 2012."
   takahashi14marchem: "Takahashi et al., Mar. Chem., 164, 95-125, doi:10.1016/j.marchem.2014.06.004, 2014."
