--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -75,7 +75,7 @@ authors:
   cagn_ch:
     name: Cagnazzo, Chiara
     institute: CNR, Italy
-    email: chiara.cagnazzo 'at' cnr.it    
+    email: chiara.cagnazzo 'at' cnr.it
   chen_ja:
     name: Chen, Jack
     institute: NCAR, USA
@@ -243,7 +243,7 @@ authors:
   serv_fe:
     name: Serva, Federico
     institute: CNR, Italy
-    email: federico.serva 'at' artov.isac.cnr.it    
+    email: federico.serva 'at' artov.isac.cnr.it
   somm_ph:
     name: Sommer, Philipp
     institute: Univ. of Hamburg, Germany
@@ -493,7 +493,7 @@ references:
   roedenbeck13os: "Roedenbeck, C. et al., Ocean Sci., 9, 193-216, doi:10.5194/os-9-193-2013, 2013."
   roehrig13jclim: "Roehrig, R. et al., J. Climate, 26, 6471-6505, doi:10.1175/JCLI-D-12-00505.1, 2013."
   sperber12asl: "Sperber and Kim, Atmos. Sci. Lett., 13, 3, 187-193, doi:10.1002/asl.378, 2012."
-  straus07jcli: "Straus, D.M., S. Corti, and F. Molteni. J. Climate, 20, 2251–2272, doi:10.1175/JCLI4070.1, 2007 " 
+  straus07jcli: "Straus, D.M., S. Corti, and F. Molteni. J. Climate, 20, 2251-2272, doi:10.1175/JCLI4070.1, 2007"
   stroeve07grl: "Stroeve, J. et al., Geophys. Res. Lett., 34, L09501, doi:10.1029/2007GL029703, 2007."
   taylor12: "Taylor et al., Nature, 489, 423-426, doi:10.1038/nature11377, 2012."
   takahashi14marchem: "Takahashi et al., Mar. Chem., 164, 95-125, doi:10.1016/j.marchem.2014.06.004, 2014."
