--- a/esmvaltool/recipes/recipe_heatwaves_coldwaves_wp7.yml
+++ b/esmvaltool/recipes/recipe_heatwaves_coldwaves_wp7.yml
@@ -15,20 +15,21 @@ documentation:
     - c3s-magic
 
 datasets:
-  - {dataset: IPSL-CM5A-LR,  type: exp, project: CMIP5,  mip: day,  exp: historical,  ensemble: r1i1p1,  start_year: 1961,  end_year: 1990}
-  - {dataset: IPSL-CM5A-LR,  type: exp, project: CMIP5,  mip: day,  exp: rcp85,  ensemble: r1i1p1,  start_year: 2020,  end_year: 2040}
-
+#  - {dataset: IPSL-CM5A-MR,  type: exp, project: CMIP5,  mip: day,  exp: historical,  ensemble: r1i1p1,  start_year: 1961,  end_year: 1990}
+#  - {dataset: IPSL-CM5A-MR,  type: exp, project: CMIP5,  mip: day,  exp: rcp85,  ensemble: r1i1p1,  start_year: 2020,  end_year: 2040}
+  - {dataset: bcc-csm1-1, type: exp, project: CMIP5, mip: day, exp: historical, ensemble: r1i1p1, start_year: 1971, end_year: 2000}
+  - {dataset: bcc-csm1-1, type: exp, project: CMIP5, mip: day, exp: rcp85, ensemble: r1i1p1, start_year: 2060, end_year: 2080}
 
 preprocessors:
   preproc:
     regrid:
-      target_grid: IPSL-CM5A-LR
+      target_grid: bcc-csm1-1
       scheme: linear
     mask_fillvalues:
       threshold_fraction: 0.95
     extract_region:
-      start_longitude: -20
-      end_longitude: 50
+      start_longitude: 220
+      end_longitude: 320
       start_latitude: 30
       end_latitude: 80
 
@@ -36,7 +37,7 @@ diagnostics:
   heatwaves_coldwaves:
     description: Calculate heatwaves and coldwaves.
     variables:
-      tasmax:
+      tasmin:
         preprocessor: preproc
         mip: day
         field: T2M
@@ -44,8 +45,8 @@ diagnostics:
       main:
         script: magic_bsc/extreme_spells.r #(in diag_scripts)
 
-        quantile: 0.9    # quantile defining the exceedance/non-exceedance threshold
+        quantile: 0.80    # quantile defining the exceedance/non-exceedance threshold
         min_duration: 5  # Min duration of a heatwave/coldwave event
-        operator: '>' #or lessthan
-        season: 'summer' # or 'winter
+        operator: '<' #or lessthan
+        season: 'winter' # or 'winter
 
