--- a/esmvaltool/recipes/recipe_modes_of_variability_wp4.yml
+++ b/esmvaltool/recipes/recipe_modes_of_variability_wp4.yml
@@ -23,21 +23,23 @@ documentation:
     - fuckar
 
 datasets:
-  - {dataset: MIROC5, project: CMIP5,  start_year: 1961,  end_year: 1990, ensemble: i0p1, exp: historical, type: exp}
-  - {dataset: MIROC5, project: CMIP5,  start_year: 2006,  end_year: 2026, ensemble: r1i1p1, exp: rcp85, type: exp}
+  #- {dataset: IPSL-CM5A-MR, project: CMIP5,  start_year: 1961,  end_year: 1990, ensemble: r1i1p1, exp: historical, type: exp}
+  #- {dataset: IPSL-CM5A-MR, project: CMIP5,  start_year: 2006,  end_year: 2026, ensemble: r1i1p1, exp: rcp85, type: exp}
+  - {dataset: bcc-csm1-1, project: CMIP5, start_year: 1971, end_year: 2000, ensemble: r1i1p1, exp: historical, type: exp}
+  - {dataset: bcc-csm1-1, project: CMIP5, start_year: 2020, end_year: 2050, ensemble: r1i1p1, exp: rcp85, type: exp}
 
 preprocessors:
   preproc:
     regrid:
-      target_grid: MIROC5
+      target_grid: bcc-csm1-1
       scheme: linear
     mask_fillvalues:
       threshold_fraction: 0.95
     extract_region:
-      start_longitude: -80
-      end_longitude: 50
-      start_latitude: 20
-      end_latitude: 80
+      start_longitude: 0
+      end_longitude: 360
+      start_latitude: 30
+      end_latitude: 90
 
 diagnostics:
   weather_regime:
@@ -45,20 +47,20 @@ diagnostics:
     variables:
       psl:
         preprocessor: preproc
-        mip: day
+        mip: Amon
         field: T2M
     scripts:
       main:
         script: magic_bsc/weather_regime.r
         region: North-Atlantic # North-Atlantic or Polar
 
-        start_historical: "1961-01-01"
-        end_historical: "1990-12-31"
-        start_projection: "2006-01-01"
-        end_projection: "2026-12-31"
+        start_historical: "1971-01-01"
+        end_historical: "2000-12-31"
+        start_projection: "2020-01-01"
+        end_projection: "2050-12-31"
 
-        ncenters: 4
+        ncenters: 3
         detrend_order: 2
-        cluster_method: "hclust" # select hclust or kmeans
+        cluster_method: "kmeans" # select hclust or kmeans
         EOFS: TRUE
-        frequency: 'DJF' # Select a month (format: JAN, FEB, ...) or should work with season also but not jet format: JJA, SON, MAM, DJF
+        frequency: 'JAN' # Select a month (format: JAN, FEB, ...) or should work with season also but not jet format: JJA, SON, MAM, DJF
